# raptor-native-ui

./: CMakeLists.txt  README.md
config/: raptor-native-ui.example.yaml  raptor-ui-service.example.yaml
include/raptor_ui/: application.hpp  config.hpp  control_server.hpp  display_backend.hpp  ipc.hpp  logger.hpp  page_controller.hpp  ui_runtime.hpp  waveshare_shim.h
include/waveshare/Config/: DEV_Config.h
src/: application.cpp  config.cpp  control_server.cpp  display_backend.cpp  ipc.cpp  logger.cpp  main.cpp  page_controller.cpp  splash_main.cpp  ui_runtime.cpp  waveshare_shim.c
src/waveshare/Config/: raptor_waveshare_dev_config.c
src/waveshare/GUI/: GUI_Paint.c
src/waveshare/OLED/: OLED_1in5_b.c
systemd/: raptor-ui-service.service
